also build client

--- a/amplify.yml
+++ b/amplify.yml
@@ -6,11 +6,11 @@ applications:
               preBuild:
                   # https://github.com/aws-amplify/amplify-cli/issues/6382#issuecomment-1145087901
                   commands:
-                      - npx pnpm -r --filter=frontend-ts... install
+                      - npx pnpm -r --stream --filter=frontend-ts... --filter=client install
               build:
                   commands:
                       - (curl -Ls https://cli.doppler.com/install.sh || wget -qO- https://cli.doppler.com/install.sh) | sh
-                      - doppler run -- npx pnpm -r --filter=frontend-ts... run build
+                      - doppler run -- npx pnpm -r --stream --filter=frontend-ts... --filter=client run build
           artifacts:
               baseDirectory: build
               files:
@@ -23,10 +23,10 @@ applications:
           phases:
               preBuild:
                   commands:
-                      - npx pnpm install
+                      - npx pnpm --filter=client install
               build:
                   commands:
-                      - npx pnpm build
+                      - npx pnpm --filter=client build
           artifacts:
               baseDirectory: dist
               files:
