--- a/packages/firstload/package.json
+++ b/packages/firstload/package.json
@@ -18,6 +18,7 @@
 		"@rollup/plugin-typescript": "^8.3.3",
 		"@types/chrome": "^0.0.144",
 		"@types/jest": "^26.0.24",
+		"@types/node": "^18.7.18",
 		"esbuild": "^0.14.47",
 		"jest": "^27.0.6",
 		"jest-fail-on-console": "^2.0.4",
