backend/ in zip file ref

--- a/.github/workflows/zane-test.yml
+++ b/.github/workflows/zane-test.yml
@@ -52,7 +52,7 @@ jobs:
                   aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
                   aws_region: us-east-2
                   function_name: getSessionIdsByQuery
-                  zip_file: getSessionIdsByQuery.zip
+                  zip_file: backend/getSessionIdsByQuery.zip
             - name: Deploy deleteSessionBatchFromPostgres
               uses: appleboy/lambda-action@master
               with:
@@ -60,7 +60,7 @@ jobs:
                   aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
                   aws_region: us-east-2
                   function_name: deleteSessionBatchFromPostgres
-                  zip_file: deleteSessionBatchFromPostgres.zip
+                  zip_file: backend/deleteSessionBatchFromPostgres.zip
             - name: Deploy deleteSessionBatchFromOpenSearch
               uses: appleboy/lambda-action@master
               with:
@@ -68,7 +68,7 @@ jobs:
                   aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
                   aws_region: us-east-2
                   function_name: deleteSessionBatchFromOpenSearch
-                  zip_file: deleteSessionBatchFromOpenSearch.zip
+                  zip_file: backend/deleteSessionBatchFromOpenSearch.zip
             - name: Deploy deleteSessionBatchFromS3
               uses: appleboy/lambda-action@master
               with:
@@ -76,7 +76,7 @@ jobs:
                   aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
                   aws_region: us-east-2
                   function_name: deleteSessionBatchFromS3
-                  zip_file: deleteSessionBatchFromS3.zip
+                  zip_file: backend/deleteSessionBatchFromS3.zip
             - name: Deploy sendEmail
               uses: appleboy/lambda-action@master
               with:
@@ -84,4 +84,4 @@ jobs:
                   aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
                   aws_region: us-east-2
                   function_name: sendEmail
-                  zip_file: sendEmail.zip
+                  zip_file: backend/sendEmail.zip
