dashboard menu (the antd menu was doing annoying and wrong things)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
 		"@apollo/client": "3.4.17",
 		"@babel/core": "^7.19.0",
 		"@datadog/browser-logs": "^4.13.0",
+		"@floating-ui/react-dom": "^1.0.0",
 		"@fontsource/poppins": "^4.5.9",
+		"@headlessui/react": "^1.7.2",
 		"@highlight-run/react": "^1.2.1",
 		"@highlight-run/react-mentions": "4.4.1",
 		"@highlight-run/react-select": "^5.2.2",
