--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -74,6 +74,7 @@ jobs:
               with:
                   start: yarn ci:start
                   wait-on: https://localhost:3000
+                  wait-on-timeout: 120
               env:
                   DOPPLER_TOKEN: ${{ secrets.DOPPLER_E2E_TOKEN }}
                   NODE_EXTRA_CA_CERTS: ./backend/localhostssl/server.crt
