Drop rm yarn.lock from clean

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	},
 	"scripts": {
 		"prepare": "husky install",
-		"frontend:clean": "concurrently 'rm -rf node_modules && rm yarn.lock' 'cd frontend && rm -rf node_modules && rm yarn.lock' 'cd client && rm -rf node_modules && rm yarn.lock' 'cd firstload && rm -rf node_modules && rm yarn.lock'",
+		"frontend:clean": "concurrently 'rm -rf node_modules' 'cd frontend && rm -rf node_modules' 'cd client && rm -rf node_modules' 'cd firstload && rm -rf node_modules'",
 		"frontend:install": "yarn && concurrently 'cd frontend && yarn --network-concurrency 1' 'cd client && yarn --network-concurrency 1' 'cd firstload && yarn --network-concurrency 1'",
 		"frontend:start": "run-p --print-label --race dev:frontend dev:client dev:client-gql dev:firstload",
 		"dev": "run-p --print-label --race dev:*",
