--- a/packages/highlight-next/package.json
+++ b/packages/highlight-next/package.json
@@ -7,7 +7,7 @@
 		"build": "run-p build:cjs build:esm",
 		"build:cjs": "tsc -p tsconfig.cjs.json",
 		"build:dev": "run-s build",
-		"build:es5": "pnpm run build:cjs # *** backwards compatibility - remove in v7 ***",
+		"build:es5": "yarn build:cjs # *** backwards compatibility - remove in v7 ***",
 		"build:esm": "tsc -p tsconfig.esm.json",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
