--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -30,23 +30,20 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v3
-            - uses: pnpm/action-setup@v2
-              with:
-                  version: 7.11.0
             - name: Setup Node.js
               uses: actions/setup-node@v3
               with:
                   node-version: 16.14.2
                   registry-url: https://registry.npmjs.org
-                  cache: 'pnpm'
+                  cache: 'yarn'
             - name: Install dependencies
-              run: pnpm install
+              run: yarn
             - name: copy frontend
               run: |
                   mkdir tmp
                   cp -a packages/frontend/. tmp/
             - name: Generate code
-              run: pnpm --filter frontend run gql:nowatch
+              run: yarn workspaces foreach frontend run gql:nowatch
             - name: Diff Check
               run: diff -r packages/frontend/src/graph tmp/src/graph
     frontend:
@@ -54,18 +51,15 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v3
-            - uses: pnpm/action-setup@v2
-              with:
-                  version: 7.11.0
             - name: Setup Node.js
               uses: actions/setup-node@v3
               with:
                   node-version: 16.14.2
                   registry-url: https://registry.npmjs.org
-                  cache: 'pnpm'
+                  cache: 'yarn'
             - name: Install dependencies
-              run: pnpm --filter frontend install
+              run: yarn workspaces foreach frontend install
             - name: Runs linting
-              run: pnpm --filter frontend test
+              run: yarn workspaces foreach frontend test
             - name: Build Bundle
-              run: export NODE_OPTIONS='--max-old-space-size=7168' && CI=false pnpm --filter frontend run build
+              run: export NODE_OPTIONS='--max-old-space-size=7168' && CI=false yarn workspaces foreach frontend run build
