--- a/.github/workflows/sourcemap-uploader.yml
+++ b/.github/workflows/sourcemap-uploader.yml
@@ -10,21 +10,18 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v3
-            - uses: pnpm/action-setup@v2
-              with:
-                  version: 7.11.0
             - name: Setup Node.js
               uses: actions/setup-node@v3
               with:
                   node-version: 16.14.2
                   registry-url: https://registry.npmjs.org
-                  cache: 'pnpm'
+                  cache: 'yarn'
             - name: Install main dependencies
-              run: pnpm install
+              run: yarn
             - name: Confirm new version
               run: cd packages/sourcemap-uploader && python3 ../../scripts/compare.py -s sourcemap-uploader
             - name: Publish
               if: github.ref == 'refs/heads/master'
-              run: pnpm --filter sourcemap-uploader publish --access public
+              run: yarn workspaces foreach sourcemap-uploader publish --access public
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
