--- a/amplify.yml
+++ b/amplify.yml
@@ -4,13 +4,12 @@ applications:
       frontend:
           phases:
               preBuild:
-                  # https://github.com/aws-amplify/amplify-cli/issues/6382#issuecomment-1145087901
                   commands:
-                      - npx pnpm -r --stream --filter=frontend-ts... --filter=client install
+                      - yarn workspaces focus
               build:
                   commands:
                       - (curl -Ls https://cli.doppler.com/install.sh || wget -qO- https://cli.doppler.com/install.sh) | sh
-                      - doppler run -- npx pnpm -r --stream --filter=frontend-ts... --filter=client run build
+                      - doppler run -- yarn workspaces foreach --parallel --interlaced --topological --recursive --verbose run build
           artifacts:
               baseDirectory: build
               files:
@@ -23,10 +22,10 @@ applications:
           phases:
               preBuild:
                   commands:
-                      - npx pnpm --filter=client install
+                      - yarn workspaces focus
               build:
                   commands:
-                      - npx pnpm --filter=client build
+                      - yarn workspaces foreach build
           artifacts:
               baseDirectory: dist
               files:
