--- a/package.json
+++ b/package.json
@@ -5,18 +5,22 @@
 	"repository": "git@github.com:highlight-run/highlight.git",
 	"author": "Highlight",
 	"license": "MIT",
+	"packageManager": "yarn@3.2.3",
+	"workspaces": [
+		"packages/*",
+		"packages/experiments/*"
+	],
 	"scripts": {
-		"prepare": "only-allow pnpm && husky install",
-		"frontend:start": "echo \"run 'pnpm dev:frontend' instead, or run 'pnpm dev' to run all projects at once\"",
-		"dev": "run-p --print-label --race dev:*",
-		"dev:frontend": "pnpm -r --parallel --filter=!render run dev",
+		"prepare": "only-allow yarn && husky install",
+		"frontend:start": "echo \"run 'yarn dev:frontend' instead, or run 'yarn dev' to run all projects at once\"",
+		"dev": "run-p --print-label --race \"dev:*\"",
+		"dev:frontend": "yarn workspaces foreach --parallel --interlaced --verbose --exclude render run dev",
 		"dev:backend": "cd backend && make start",
 		"dev:redis": "redis-server",
 		"generate": "hygen",
 		"g": "hygen",
 		"format": "prettier --write --ignore-unknown . \"!./data\"",
-		"format-check": "prettier --check --ignore-unknown . \"!./data\"",
-		"bump-versions": "pnpm -r --workspace-concurrency=1 exec bumpp --no-commit --no-tag --no-push"
+		"format-check": "prettier --check --ignore-unknown . \"!./data\""
 	},
 	"devDependencies": {
 		"@types/node": "^18.7.14",
@@ -29,9 +33,10 @@
 		"prettier": "^2.7.1",
 		"pretty-quick": "^3.1.3"
 	},
-	"pnpm": {
-		"patchedDependencies": {
-			"@rehooks/local-storage@2.4.4": "patches/@rehooks__local-storage@2.4.4.patch"
-		}
+	"resolutions": {
+		"ansi-regex": "5.0.1",
+		"terser": "5.14.2",
+		"json-schema": "0.4.0",
+		"react-error-overlay": "6.0.9"
 	}
 }
