--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -8,8 +8,8 @@
 	"scripts": {
 		"dev": "doppler run -- rollup -c -w",
 		"dev:rollup": "doppler run -- rollup -c -w",
-		"dev:gql": "pnpm run gql --watch",
-		"build": "pnpm run gql && rollup -c",
+		"dev:gql": "yarn run gql --watch",
+		"build": "yarn run gql && rollup -c",
 		"test": "jest --passWithNoTests",
 		"gql": "graphql-codegen --config codegen.yml"
 	},
@@ -29,9 +29,9 @@
 		"@graphql-codegen/typescript": "^2.7.2",
 		"@graphql-codegen/typescript-graphql-request": "^4.5.2",
 		"@graphql-codegen/typescript-operations": "^2.5.2",
-		"@types/node": "^16.3.1",
 		"@types/jest": "^26.0.20",
 		"@types/json-stringify-safe": "^5.0.0",
+		"@types/node": "^16.3.1",
 		"@typescript-eslint/eslint-plugin": "^5.30.0",
 		"@typescript-eslint/parser": "^5.30.0",
 		"eslint": "^8.18.0",
@@ -39,6 +39,7 @@
 		"eslint-plugin-unused-imports": "^2.0.0",
 		"jest": "^26.6.3",
 		"onchange": "^7.1.0",
+		"prettier": "^2.7.1",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.1.3"
 	},
@@ -52,7 +53,7 @@
 		"@rollup/plugin-typescript": "^8.3.3",
 		"error-stack-parser": "2.0.6",
 		"esbuild": "^0.14.47",
-		"graphql": "^16.5.0",
+		"graphql": "^16.6.0",
 		"graphql-request": "^4.3.0",
 		"graphql-tag": "^2.12.6",
 		"json-stringify-safe": "^5.0.1",
@@ -65,10 +66,5 @@
 		"rollup-plugin-web-worker-loader": "^1.6.1",
 		"stacktrace-js": "2.0.2",
 		"tslib": "^2.4.0"
-	},
-	"resolutions": {
-		"ansi-regex": "5.0.1",
-		"terser": "5.14.2",
-		"json-schema": "0.4.0"
 	}
 }
