--- a/packages/experiments/chrome-extension/package.json
+++ b/packages/experiments/chrome-extension/package.json
@@ -24,7 +24,7 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "INLINE_RUNTIME_CHUNK=false react-scripts build",
-		"firstload:update": "cd ../../firstload && pnpm build && mkdir -p ../experiments/chrome-extension/build/firstload && cp -r dist/* ../experiments/chrome-extension/build/firstload",
+		"firstload:update": "cd ../../firstload && yarn build && mkdir -p ../experiments/chrome-extension/build/firstload && cp -r dist/* ../experiments/chrome-extension/build/firstload",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
