--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -3,19 +3,19 @@
 	"version": "1.12.5",
 	"private": true,
 	"scripts": {
-		"dev": "doppler run -- run-p --print-label --race dev:*",
+		"dev": "doppler run -- run-p --print-label --race \"dev:*\"",
 		"dev:vite": "vite",
 		"dev:tsm": "tsm src -w --logLevel=error",
 		"dev:gql": "graphql-codegen --config --watch codegen.yml",
 		"gql:nowatch": "graphql-codegen --config codegen.yml",
 		"build": "vite build",
 		"test": "TZ=UTC vitest",
-		"lint": "pnpm run lint:es && stylelint \"**/*.scss\"",
+		"lint": "yarn run lint:es && stylelint \"**/*.scss\"",
 		"lint:es": "eslint --fix \"src/**/*.{ts,tsx}\"",
 		"lint:css": "stylelint \"**/*.scss\" --fix",
 		"preview": "INLINE_FIREBASE_CONFIG=true vite build && vite preview",
 		"analyze": "source-map-explorer 'build/static/js/*.js'",
-		"svg": "svgr --typescript ./src/static --out-dir ./src/static --icon && pnpm run lint:es"
+		"svg": "svgr --typescript ./src/static --out-dir ./src/static --icon && yarn run lint:es"
 	},
 	"dependencies": {
 		"@ant-design/icons": "^4.7.0",
@@ -24,6 +24,7 @@
 		"@datadog/browser-logs": "^4.13.0",
 		"@dinero.js/currencies": "2.0.0-alpha.1",
 		"@fontsource/poppins": "^4.5.9",
+		"@highlight-run/client": "workspace:*",
 		"@highlight-run/react": "^1.2.1",
 		"@highlight-run/react-mentions": "4.4.1",
 		"@highlight-run/react-select": "^5.2.2",
@@ -40,8 +41,7 @@
 		"eslint-plugin-simple-import-sort": "^7.0.0",
 		"firebase": "^8.10.1",
 		"framer-motion": "^4.1.17",
-		"graphql": "^15.5.0",
-		"highlight.run": "workspace:^4.4.1",
+		"highlight.run": "workspace:*",
 		"intro.js": "^4.1.0",
 		"intro.js-react": "^0.6.0",
 		"lodash": "^4.17.21",
@@ -157,9 +157,5 @@
 		"vite-plugin-svgr": "^2.2.1",
 		"vite-tsconfig-paths": "^3.5.0",
 		"vitest": "^0.22.1"
-	},
-	"resolutions": {
-		"**/postcss-custom-properties": "^12.1.7",
-		"react-error-overlay": "6.0.9"
 	}
 }
