Move app start back to Cypress task

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -78,16 +78,15 @@ jobs:
               run: yarn && cd frontend && yarn && cd ../client && yarn
             - name: Install Air
               run: go install github.com/cosmtrek/air@latest
-            - name: Start app
-              run: yarn ci:start
-              env:
-                  DOPPLER_TOKEN: ${{ secrets.DOPPLER_E2E_TOKEN }}
-                  NODE_EXTRA_CA_CERTS: ./backend/localhostssl/server.crt
             - name: Cypress install and run
               uses: cypress-io/github-action@v4
               with:
+                  start: yarn ci:start
                   wait-on: 'https://localhost:3000, http://localhost:8080/dist/index.js'
                   wait-on-timeout: 120
+              env:
+                  DOPPLER_TOKEN: ${{ secrets.DOPPLER_E2E_TOKEN }}
+                  NODE_EXTRA_CA_CERTS: ./backend/localhostssl/server.crt
             - name: Save videos
               uses: actions/upload-artifact@v2
               with:
