--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -89,6 +89,7 @@ jobs:
                   NODE_EXTRA_CA_CERTS: ./backend/localhostssl/server.crt
             - name: Save videos
               uses: actions/upload-artifact@v2
+              if: failure()
               with:
                   name: cypress-videos
                   path: cypress/videos
