--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -54,6 +54,10 @@ jobs:
                   node-version: 16.14.2
                   registry-url: https://registry.npmjs.org
                   cache: yarn
+                  cache-dependency-path: |
+                      yarn.lock
+                      frontend/yarn.lock
+                      client/yarn.lock
             - name: Setup Go
               uses: actions/setup-go@v3
               with:
