--- a/front-plugin/package.json
+++ b/front-plugin/package.json
@@ -17,10 +17,10 @@
 	},
 	"scripts": {
 		"start": "PORT=3001 react-scripts start",
+		"start:gql": "graphql-codegen --config --watch codegen.yml",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"dev:gql": "graphql-codegen --config --watch codegen.yml",
 		"gql:nowatch": "graphql-codegen --config codegen.yml"
 	},
 	"eslintConfig": {
@@ -54,8 +54,12 @@
 		"@types/node": "^18.7.18",
 		"@types/react": "^18.0.20",
 		"@types/react-dom": "^18.0.6",
+		"autoprefixer": "^10.4.12",
+		"eslint-plugin-tailwindcss": "^3.6.2",
 		"graphql-tag": "^2.12.6",
+		"postcss": "^8.4.16",
 		"prettier": "^2.7.1",
+		"tailwindcss": "^3.1.8",
 		"typescript": "^4.8.3"
 	}
 }
