--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
 		"format-check": "prettier --check --ignore-unknown . \"!./data\"",
 		"ci:backend": "cd backend && doppler run -- ./backend",
 		"ci:build": "cd backend && go build",
+		"ci:install": "run-p --print-label --race ci:install:go ci:install:yarn",
+		"ci:install:go": "cd backend && go build",
+		"ci:install:yarn": "yarn --prefer-offline && cd frontend && yarn --prefer-offline && cd ../client && yarn --prefer-offline",
 		"ci:start": "run-p --print-label --race dev:frontend dev:client ci:backend",
-		"ci:test:e2e": "start-server-and-test dev https-get://localhost:3000 cy:run",
 		"cy:run": "cypress run",
 		"cy:run:chrome": "cypress run --headed --browser chrome"
 	},
