migrate to yarn workspaces with yarn v3

--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,17 @@ esm
 out
 build
 
-
 apollo.config.js
 .yalc
 yalc.lock
+
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
 **/*.pem
 **/*.test
