--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"target": "es5",
+		"target": "ESNext",
 		"lib": ["dom", "es2019", "dom.iterable", "esnext"],
 		"skipLibCheck": true,
 		"esModuleInterop": true,
