--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "highlight",
+	"private": true,
 	"version": "1.0.0",
 	"main": "index.js",
 	"repository": "git@github.com:highlight-run/highlight.git",
@@ -8,14 +9,20 @@
 	"dependencies": {
 		"concurrently": "^6.5.1"
 	},
+	"workspaces": [
+		"client",
+		"firstload",
+		"frontend",
+		"highlight-next",
+		"highlight-node"
+	],
 	"scripts": {
-		"prepare": "husky install",
-		"frontend:clean": "concurrently 'rm -rf node_modules' 'cd frontend && rm -rf node_modules' 'cd client && rm -rf node_modules' 'cd firstload && rm -rf node_modules'",
-		"frontend:install": "yarn && concurrently 'cd frontend && yarn' 'cd client && yarn' 'cd firstload && yarn'",
+		"prepare": "husky install && patch-package",
+		"frontend:clean": "concurrently 'rm -rf node_modules' 'cd frontend && rm -rf build node_modules' 'cd client && rm -rf dist node_modules' 'cd firstload && rm -rf dist node_modules'",
 		"frontend:start": "run-p --print-label --race dev:frontend dev:client dev:client-gql dev:firstload",
-		"dev": "run-p --print-label --race dev:*",
+		"dev": "run-p --print-label --race 'dev:*'",
 		"dev:backend": "cd backend && make start",
-		"dev:frontend": "cd frontend && yarn dev",
+		"dev:frontend": "wait-on firstload/dist/index.js && cd frontend && yarn dev",
 		"dev:client": "cd client && yarn dev",
 		"dev:client-gql": "cd client && yarn gql",
 		"dev:firstload": "cd firstload && yarn dev",
@@ -40,7 +47,10 @@
 		"husky": "^8.0.1",
 		"hygen": "^6.2.7",
 		"npm-run-all": "^4.1.5",
+		"patch-package": "^6.4.7",
 		"prettier": "^2.7.1",
-		"pretty-quick": "^3.1.3"
-	}
+		"pretty-quick": "^3.1.3",
+		"wait-on": "^6.0.1"
+	},
+	"packageManager": "yarn@3.2.3"
 }
